# Opus-2

./: .gitignore  FEATURES.md  IMPLEMENTATION_SUMMARY.md  PREPROCESSING_GUIDE.md  PROJECT_SUMMARY.md  QUALITY_STANDARDS.md  QUICKSTART.md  README.md  README_CELESTIAL_ENGINE.md  TECHNICAL_ARCHITECTURE.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/agents/: my-agent.agent.md
celestial_engine/: __init__.py
celestial_engine/batch/: __init__.py  processor.py
celestial_engine/cli/: main.py
celestial_engine/config/: engine_config.yaml
celestial_engine/core/: __init__.py  config.py  generator.py  llm_interface.py  models.py
celestial_engine/monitoring/: __init__.py  logger.py
celestial_engine/preprocessing/: __init__.py  topic_analyzer.py
celestial_engine/prompts/: __init__.py  templates.py
celestial_engine/refinement/: __init__.py  refiner.py
celestial_engine/validation/: __init__.py  validator.py
configs/: production.json
examples/: preprocessing_demo.py
scripts/: example_topics.txt  quick_test.sh  setup.sh
src/preprocessing/: __init__.py  citation_preparer.py  semantic_mapper.py  theological_context.py  topic_analyzer.py
src/validation/: __init__.py  citation_validator.py  coherence_analyzer.py  entry_validator.py  quality_scorer.py
